--- a/index.html
+++ b/index.html
@@ -1,17 +1,84 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="assets/css/main.css">
 </head>
+
 <body>
-    
-    <form action="subir.php" method="post" enctype="multipart/form-data">
-        <input name="archivo" type="file" size="35"/>
-        <input name="enviar" type="submit" value="Upload File"/>
-        <input name="action" type="hidden" value="upload"/>       
-    </form>
+    <nav>
+        <div class="nav-wrapper deep-purple">
+            <a href="#" class="brand-logo center">Upload images</a>
+            <ul id="nav-mobile" class="left hide-on-med-and-down">
+                <li><a href="badges.html">View</a></li>
+                <li><a href="collapsible.html">Upload</a></li>
+            </ul>
+        </div>
+    </nav>
+
+    <div class="container">
+
+        <div>
+            <h5 class="center-align">Can you upload you favorite image.</h5>
+        </div>
+
+        <div class="row">
+            <form class="col s12" action="subir.php" method="post" enctype="multipart/form-data">
+                <div class="row">
+                    <div class="col s12 ">
+                        <div class="file-field">
+                            <div class="btn deep-purple">
+                                <span>Browse</span>
+                                <input name="archivo" required accept="image/*" type="file" />
+                            </div>
+                            <div class="file-path-wrapper">
+                                <input class="file-path validate" type="text" placeholder="Upload file" />
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col s12">
+                        <button type="submit" class="deep-purple btn btn-block"><i class="material-icons right">cloud</i>Add image</button>
+                        <input name="action" type="hidden" value="upload" />
+                    </div>
+                </div>
+            </form>
+        </div>
+    </div>
+
+    <footer class="page-footer deep-purple">
+        <div class="container">
+            <div class="row">
+                <div class="col l6 s12">
+                    <h5 class="white-text">Footer Content</h5>
+                    <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
+                </div>
+                <div class="col l4 offset-l2 s12">
+                    <h5 class="white-text">Links</h5>
+                    <ul>
+                        <li><a class="grey-text text-lighten-3" href="#!">Link 1</a></li>
+                        <li><a class="grey-text text-lighten-3" href="#!">Link 2</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="footer-copyright">
+            <div class="container">
+                © 2019 Jorge Jacobo
+                <a class="grey-text text-lighten-4 right" href="https://github.com/JorgeJy2/Upload_file_php">Project Git-Hub</a>
+            </div>
+        </div>
+    </footer>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 </body>
+
 </html>
