--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </div>
 
         <div class="row">
-            <form class="col s12" action="subir.php" method="post" enctype="multipart/form-data">
+            <form class="col s12" action="upload.php" method="post" enctype="multipart/form-data">
                 <div class="row">
                     <div class="col s12 ">
                         <div class="file-field">
