--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
             <h5 class="center-align">Can you upload you favorite image.</h5>
         </div>
 
+        <div class="row center-align">
+            <img class="image_presentation" src="assets/images/img_presentation.svg" alt="" srcset="">
+        </div>
+
         <div class="row">
             <form class="col s12" action="upload.php" method="post" enctype="multipart/form-data">
                 <div class="row">
@@ -55,18 +59,18 @@
         </div>
     </div>
 
-    <footer class="page-footer  red">
+    <footer class="page-footer red">
         <div class="container">
             <div class="row">
                 <div class="col l6 s12">
                     <h5 class="white-text">Footer Content</h5>
-                    <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
+                    <p class="grey-text text-lighten-4">This's a simple footer and simple description.</p>
                 </div>
                 <div class="col l4 offset-l2 s12">
-                    <h5 class="white-text">Links</h5>
+                    <h5 class="white-text">More information</h5>
                     <ul>
-                        <li><a class="grey-text text-lighten-3" href="#!">Link 1</a></li>
-                        <li><a class="grey-text text-lighten-3" href="#!">Link 2</a></li>
+                        <li><a class="grey-text text-lighten-3" href="https://github.com/jorgeJy2">My GitHub</a></li>
+                        <li><a class="grey-text text-lighten-3" href="https://twitter.com/jorge_jacobo_jy">My twitter</a></li>
                     </ul>
                 </div>
             </div>
@@ -86,8 +90,8 @@
             <i class="large material-icons">more</i>
         </a>
         <ul>
-            <li><a href="index.html" class="btn-floating red"><i class="material-icons">attach_file</i></a></li>
-            <li><a href="view_image.php" class="btn-floating yellow darken-1"><i class="material-icons">add</i></a></li>
+            <li><a href="view_image.php" class="btn-floating red"><i class="material-icons">attach_file</i></a></li>
+            <li><a href="index.html" class="btn-floating yellow darken-1"><i class="material-icons">add</i></a></li>
         </ul>
     </div>
 
